--- a/index.html
+++ b/index.html
@@ -1,1 +1,145 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tic Tac Toe</title>
+    <style>
+        body {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            background-color:darkviolet;
+            font-family: Arial, sans-serif;
+            font-size: 2rem;
+        }
+        #board {
+            display: grid;
+            grid-template-columns: repeat(3, 100px);
+            grid-template-rows: repeat(3, 100px);
+            gap: 5px;
+        }
+        .cell {
+            width: 100px;
+            height: 100px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 2rem;
+            background-color: rgb(102, 92, 99);
+            border: 1px solid #928d8dc5;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+        .cell:hover {
+            background-color: #a7a7a7;
+        }
+        #message {
+            margin-top: 20px;
+            font-size: 1.5rem;
+            color: #333;
+        }
+        button {
+            margin-top: 20px;
+            padding: 10px 20px;
+            font-size: 2rem;
+            cursor: pointer;
+        }
+        .winner {
+            color: green;
+            font-weight: bold;
+        }
+    </style>
+</head>
+<body>
 
+    <h1>SIS STREAM FAIR 2024 </h1>
+    
+<div id="board"></div>
+<div id="message"></div>
+<button onclick="resetGame()">Restart Game</button>
+
+<script>
+    const board = document.getElementById('board');
+    const message = document.getElementById('message');
+    let currentPlayer = 'X';
+    const gameState = ['', '', '', '', '', '', '', '', ''];
+
+    function createBoard() {
+        board.innerHTML = '',
+        gameState.forEach((cell, index) => {
+            const cellDiv = document.createElement('div');
+            cellDiv.classList.add('cell');
+            cellDiv.textContent = cell;
+            cellDiv.addEventListener('click', () => handleCellClick(index));
+            board.appendChild(cellDiv);
+        });
+    }
+
+    function handleCellClick(index) {
+        if (gameState[index] || message.textContent) return;
+
+        gameState[index] = currentPlayer;
+        createBoard();
+        checkWinner();
+        currentPlayer = currentPlayer === 'X' ? 'O' : 'X';
+    }
+
+    function checkWinner() {
+        const winningCombinations = [
+            [0, 1, 2],
+            [3, 4, 5],
+            [6, 7, 8],
+            [0, 3, 6],
+            [1, 4, 7],
+            [2, 5, 8],
+            [0, 4, 8],
+            [2, 4, 6]
+        ];
+
+        for (let combination of winningCombinations) {
+            const [a, b, c] = combination;
+            if (gameState[a] && gameState[a] === gameState[b] && gameState[a] === gameState[c]) {
+                message.textContent = `Player ${gameState[a]} wins!`;
+                message.classList.add('winner');
+                return;
+            }
+        }
+
+        if (!gameState.includes('')) {
+            message.textContent = "It's a draw!";
+        }
+    }
+
+    function resetGame() {
+        currentPlayer = 'X';
+        gameState.fill('');
+        message.textContent = '';
+        message.classList.remove('winner');
+        createBoard();
+    }
+
+    // Add sound effects
+    function playSound() {
+        const sound = new Audio('https://www.soundjay.com/button/sounds/button-3.mp3');
+        sound.play();
+    }
+
+    // Call playSound on cell click
+    function handleCellClick(index) {
+        if (gameState[index] || message.textContent) return;
+
+        playSound(); // Play sound effect
+        gameState[index] = currentPlayer;
+        createBoard();
+        checkWinner();
+        currentPlayer = currentPlayer === 'X' ? 'O' : 'X';
+    }
+
+    createBoard();
+</script>
+
+</body>
+</html>
